aruha-1387 optimize subscription start
It was taking up to 20 seconds to get all the initial cursors for new
subscriptions. This improvement uses batching to perform a single
statistics request per storage instead of executing for each timeline.